# src/router/commonRoute.ts
@@ -26,7 +26,6 @@ routerCommon.post(
 
 
 
-
 routerCommon.patch(
   "/editCandidate",
   //#swagger.tags = ['Common']
@@ -54,5 +53,59 @@ routerCommon.delete("/deleteCandidate",
   //#swagger.parameters['id']= { in:'query',type: 'number',required:true },
   controllerCommon.deleteCandidate
 )
+
+
+
+routerCommon.post(
+  "/createClient",
+  //#swagger.tags = ['Common']
+  //#swagger.description = 'API to create a new candidate record'
+  //#swagger.parameters['enquiry_raised_date']= { in:'formData',type: 'string', format: 'date-time', example: '2025-11-07T00:00:00Z' },
+  //#swagger.parameters['enquiry_answerd_date']= {in:'formData', type: 'string', format: 'date-time', example: '2025-11-07T00:00:00Z' }
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true ,example:"abcd"}
+  //#swagger.parameters['company_name'] = {in:'formData',type:'string',required:true ,example:"abcd"}
+  //#swagger.parameters['phone_number'] = {in:'formData',type:'number',required:true ,example:"123456789"}
+  //#swagger.parameters['alternative_phonenumber'] = {in:'formData',type:'number',example:"123456789"}
+  //#swagger.parameters['email'] = {in:'formData',type:'string',required:true ,example:"abcd@gmail,\.com"}
+  //#swagger.parameters['location'] = {in:'formData',type:'string'}
+  //#swagger.parameters['business_type'] = {in:'formData',type:'string'}
+  //#swagger.parameters['service_required'] = {in:'formData',type:'string'}
+  //#swagger.parameters['lead'] = {in:'formData',type:'string'}
+  //#swagger.parameters['remark'] = {in:'formData',type:'string'}
+  //#swagger.parameters['added_by'] = {in:'formData',type:'string'}
+  controllerCommon.addClient
+);
+
+routerCommon.patch(
+  "/editClient",
+  //#swagger.tags = ['Common']
+  //#swagger.description = 'API to create a new candidate record'
+  //#swagger.parameters['id']= { in:'formData',type: 'number', example: '1' },
+  //#swagger.parameters['enquiry_raised_date']= { in:'formData',type: 'string', format: 'date-time', example: '2025-11-07T00:00:00Z' },
+  //#swagger.parameters['enquiry_answerd_date']= {in:'formData', type: 'string', format: 'date-time', example: '2025-11-07T00:00:00Z' }
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true ,example:"abcd"}
+  //#swagger.parameters['company_name'] = {in:'formData',type:'string',required:true ,example:"abcd"}
+  //#swagger.parameters['phone_number'] = {in:'formData',type:'number',required:true ,example:"123456789"}
+  //#swagger.parameters['alternative_phonenumber'] = {in:'formData',type:'number',example:"123456789"}
+  //#swagger.parameters['email'] = {in:'formData',type:'string',required:true ,example:"abcd@gmail,\.com"}
+  //#swagger.parameters['location'] = {in:'formData',type:'string'}
+  //#swagger.parameters['business_type'] = {in:'formData',type:'string'}
+  //#swagger.parameters['service_required'] = {in:'formData',type:'string'}
+  //#swagger.parameters['lead'] = {in:'formData',type:'string'}
+  //#swagger.parameters['remark'] = {in:'formData',type:'string'}
+  //#swagger.parameters['added_by'] = {in:'formData',type:'string'}
+  controllerCommon.editClient
+);
+
+
+
+routerCommon.delete("/deleteClient",
+  //#swagger.tags = ['Common']
+  //#swagger.description = 'API to Edit a  candidate record'
+  //#swagger.parameters['id']= { in:'query',type: 'number',required:true },
+  controllerCommon.deleteClient
+)
+
+
 
 export default routerCommon
